@@ -9,6 +9,7 @@ Version 0.3k2
 -------------
 * Fixing various bugs and missing tags in Cale.
 * Fixed a but in Kiakai's anal catch scene.
+* Tweaked the output of Cavalcade a bit.
 
 --------------------------------------------
              PREVIOUS VERSIONS
